Removed justify content from screenshot css which was causing weird spacing issue

--- a/app/assets/stylesheets/_screenshots.scss
+++ b/app/assets/stylesheets/_screenshots.scss
@@ -6,7 +6,6 @@
   flex-direction: row;
   gap: 1.5rem;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .screenshot-wrapper {
